# import-lesson-dist

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
assignment/: assignment.ipynb  assignment.py  file1.py  test_assignment.py
assignment/subdir1/: file2.py
assignment/subdir1/subdir2/: file3.py
assignment/subdir3/: new_module.py
source/: run_autograder  run_tests.py
